<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>org.terracotta.utils</groupId>
	<artifactId>cyberplugfest-hadoopjobs</artifactId>
	<version>1.0-SNAPSHOT</version>
	<packaging>jar</packaging>

	<name>Cyberplugfest Hadoop Jobs</name>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<spring-data.version>1.0.0.RELEASE</spring-data.version>
		<bigmemory.hadoop.version>0.1</bigmemory.hadoop.version>
		<hadoop.version>1.1.2</hadoop.version>
		<mrunit.version>0.9.0-incubating</mrunit.version>
		<slf4j.version>1.6.6</slf4j.version>
	</properties>

	<dependencies>
		<dependency>
			<groupId>org.terracotta.bigmemory.hadoop</groupId>
			<artifactId>bigmemory-hadoop</artifactId>
			<version>${bigmemory.hadoop.version}</version>
			<exclusions>
				<exclusion>
					<groupId>org.terracotta.bigmemory</groupId>
					<artifactId>bigmemory</artifactId>
				</exclusion>
				<exclusion>
					<groupId>net.sf.ehcache</groupId>
					<artifactId>ehcache-ee</artifactId>
				</exclusion>
				<exclusion>
					<groupId>org.terracotta</groupId>
					<artifactId>terracotta-toolkit-runtime-ee</artifactId>
				</exclusion>
				<exclusion>
					<groupId>org.slf4j</groupId>
					<artifactId>slf4j-jdk14</artifactId>
				</exclusion>
			</exclusions>
		</dependency>

		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-api</artifactId>
			<version>${slf4j.version}</version>
		</dependency>

		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-log4j12</artifactId>
			<version>${slf4j.version}</version>
		</dependency>

		<dependency>
			<groupId>log4j</groupId>
			<artifactId>log4j</artifactId>
			<version>1.2.17</version>
		</dependency>

		<dependency>
			<groupId>org.springframework.data</groupId>
			<artifactId>spring-data-hadoop</artifactId>
			<version>${spring-data.version}</version>
		</dependency>

		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.10</version>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-lang3</artifactId>
			<version>3.1</version>
		</dependency>

		<dependency>
			<groupId>org.apache.hadoop</groupId>
			<artifactId>hadoop-core</artifactId>
			<version>${hadoop.version}</version>
			<scope>compile</scope>
			<exclusions>
				<exclusion>
					<groupId>org.mortbay.jetty</groupId>
					<artifactId>jetty</artifactId>
				</exclusion>
				<exclusion>
					<groupId>org.mortbay.jetty</groupId>
					<artifactId>jetty-util</artifactId>
				</exclusion>
				<exclusion>
					<groupId>tomcat</groupId>
					<artifactId>jasper-compiler</artifactId>
				</exclusion>
				<exclusion>
					<groupId>tomcat</groupId>
					<artifactId>jasper-runtime</artifactId>
				</exclusion>
				<exclusion>
					<groupId>javax.servlet.jsp</groupId>
					<artifactId>jsp-api</artifactId>
				</exclusion>
			</exclusions>
		</dependency>

		<dependency>
			<groupId>org.apache.mrunit</groupId>
			<artifactId>mrunit</artifactId>
			<version>${mrunit.version}</version>
			<classifier>hadoop1</classifier>
			<scope>test</scope>
		</dependency>
	</dependencies>

	<build>
		<resources>
			<resource>
				<directory>src/main/resources</directory>
				<filtering>true</filtering>
				<includes>
					<include>**/*</include>
				</includes>
			</resource>
		</resources>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>2.5.1</version>
				<configuration>
					<source>1.6</source>
					<target>1.6</target>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-resources-plugin</artifactId>
				<version>2.4</version>
				<configuration>
					<encoding>UTF-8</encoding>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>appassembler-maven-plugin</artifactId>
				<version>1.3.1</version>
				<configuration>
					<repositoryLayout>flat</repositoryLayout>
					<!-- Extra JVM arguments that will be included in the bin scripts -->
					<extraJvmArguments>-Xms512m -Xmx1024m -XX:MaxPermSize=256m
						-XX:+UseParallelOldGC -XX:+UseCompressedOops
						-XX:MaxDirectMemorySize=10G
						-Dcom.tc.productkey.path=${user.home}/terracotta-license.key
						-Dhadoop.root.logger=INFO,console
					</extraJvmArguments>
					<programs>
						<program>
							<mainClass>org.terracotta.pocs.cyberplugfest.Main</mainClass>
							<name>PlugfestHadoopApp</name>
						</program>
						<program>
							<mainClass>org.terracotta.pocs.cyberplugfest.VerifyBigmemoryData</mainClass>
							<name>VerifyBigmemoryData</name>
						</program>
					</programs>
				</configuration>
			</plugin>
		</plugins>
	</build>

	<profiles>
		<profile>
			<id>terracotta37x-dev</id>
			<properties>
				<namenode.name>fs.default.name</namenode.name>
				<namenode.value>hdfs://localhost:9000/</namenode.value>
				<mapred.job.tracker>localhost:9001</mapred.job.tracker>
				<hadoop.output.cache>vendorAvgSpend</hadoop.output.cache>
				<terracotta.url>localhost:9510</terracotta.url>

				<ehcache-core-ee.version>2.6.4</ehcache-core-ee.version>
				<ehcache-terracotta-ee.version>2.6.4</ehcache-terracotta-ee.version>
			</properties>
			<dependencies>
				<!-- EhCache -->
				<dependency>
					<groupId>net.sf.ehcache</groupId>
					<artifactId>ehcache-core-ee</artifactId>
					<version>${ehcache-core-ee.version}</version>
				</dependency>

				<dependency>
					<groupId>net.sf.ehcache</groupId>
					<artifactId>ehcache-terracotta-ee</artifactId>
					<version>${ehcache-terracotta-ee.version}</version>
				</dependency>
			</dependencies>
		</profile>
		<profile>
			<id>terracotta37x-prod</id>
			<properties>
				<namenode.name>fs.default.name</namenode.name>
				<namenode.value>hdfs://ec2-107-22-170-219.compute-1.amazonaws.com:9000/</namenode.value>
				<mapred.job.tracker>ec2-107-22-170-219.compute-1.amazonaws.com:9001</mapred.job.tracker>
				<hadoop.output.cache>vendorAvgSpend</hadoop.output.cache>
				<terracotta.url>ec2-107-22-170-219.compute-1.amazonaws.com:9510</terracotta.url>

				<ehcache-core-ee.version>2.6.4</ehcache-core-ee.version>
				<ehcache-terracotta-ee.version>2.6.4</ehcache-terracotta-ee.version>
			</properties>
			<dependencies>
				<!-- EhCache -->
				<dependency>
					<groupId>net.sf.ehcache</groupId>
					<artifactId>ehcache-core-ee</artifactId>
					<version>${ehcache-core-ee.version}</version>
				</dependency>

				<dependency>
					<groupId>net.sf.ehcache</groupId>
					<artifactId>ehcache-terracotta-ee</artifactId>
					<version>${ehcache-terracotta-ee.version}</version>
				</dependency>
			</dependencies>
		</profile>
		<profile>
			<id>terracotta4x-dev</id>
			<activation>
				<activeByDefault>true</activeByDefault>
			</activation>
			<properties>
				<namenode.name>fs.default.name</namenode.name>
				<namenode.value>hdfs://localhost:9000/</namenode.value>
				<mapred.job.tracker>localhost:9001</mapred.job.tracker>
				<hadoop.output.cache>vendorAvgSpend</hadoop.output.cache>
				<terracotta.url>localhost:9510</terracotta.url>

				<bigmemory.version>4.0.2</bigmemory.version>
				<ehcache-ee.version>2.7.2</ehcache-ee.version>
				<toolkit.version>4.0.2</toolkit.version>
			</properties>
			<dependencies>
				<dependency>
					<groupId>org.terracotta.bigmemory</groupId>
					<artifactId>bigmemory</artifactId>
					<version>${bigmemory.version}</version>
				</dependency>
				<dependency>
					<groupId>net.sf.ehcache</groupId>
					<artifactId>ehcache-ee</artifactId>
					<version>${ehcache-ee.version}</version>
				</dependency>
				<dependency>
					<groupId>org.terracotta</groupId>
					<artifactId>terracotta-toolkit-runtime-ee</artifactId>
					<version>${toolkit.version}</version>
				</dependency>
			</dependencies>
		</profile>
		<profile>
			<id>terracotta4x-prod</id>
			<properties>
				<namenode.name>fs.default.name</namenode.name>
				<namenode.value>hdfs://ec2-107-22-170-219.compute-1.amazonaws.com:9000/</namenode.value>
				<mapred.job.tracker>ec2-107-22-170-219.compute-1.amazonaws.com:9001</mapred.job.tracker>
				<hadoop.output.cache>vendorAvgSpend</hadoop.output.cache>
				<terracotta.url>ec2-107-22-170-219.compute-1.amazonaws.com:9510</terracotta.url>

				<bigmemory.version>4.0.2</bigmemory.version>
				<ehcache-ee.version>2.7.2</ehcache-ee.version>
				<toolkit.version>4.0.2</toolkit.version>
			</properties>
			<dependencies>
				<dependency>
					<groupId>org.terracotta.bigmemory</groupId>
					<artifactId>bigmemory</artifactId>
					<version>${bigmemory.version}</version>
				</dependency>
				<dependency>
					<groupId>net.sf.ehcache</groupId>
					<artifactId>ehcache-ee</artifactId>
					<version>${ehcache-ee.version}</version>
				</dependency>
				<dependency>
					<groupId>org.terracotta</groupId>
					<artifactId>terracotta-toolkit-runtime-ee</artifactId>
					<version>${toolkit.version}</version>
				</dependency>
			</dependencies>
		</profile>
	</profiles>

	<repositories>
		<repository>
			<id>terracotta-snapshots</id>
			<url>http://www.terracotta.org/download/reflector/snapshots</url>
		</repository>
		<repository>
			<id>terracotta-releases</id>
			<url>http://www.terracotta.org/download/reflector/releases</url>
			<releases>
				<enabled>true</enabled>
			</releases>
		</repository>
	</repositories>
</project>
